feat(docs):moved api docs endpoint
